[package]
name = "ixsi-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4.19"
nalgebra-sparse = "0.9.0"
nalgebra = { version = "0.32.5", features = ["sparse"] }
rand = "0.8.5"
tokio = { version = "1.29", features = ["macros", "rt"] }
